server/deploy/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: aoe2companion-api
  namespace: default
  labels:
    app: aoe2companion-api
spec:
  selector:
    matchLabels:
      name: aoe2companion-api
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      minReadySeconds: 30
  template:
    metadata:
      labels:
        app: aoe2companion-api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: aoe2companion-api
          image: denniske/aoe2companion-api:$COMMIT_SHA1
          ports:
            - containerPort: 80
              name: http
