server/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aoe2companion-api
  namespace: default
  labels:
    app: aoe2companion-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aoe2companion-api
  template:
    metadata:
      labels:
        app: aoe2companion-api
    spec:
      containers:
        - name: aoe2companion-api
          image: denniske/aoe2companion-api:$COMMIT_SHA1
          ports:
            - containerPort: 80
              name: http
