server/deploy/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: do-kubernetes-sample-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.aoe2companion.com
      http:
        paths:
          - backend:
              serviceName: do-kubernetes-sample-app
              servicePort: 80
